Add /version endpoint and --version cli flag
Closes #18

Allow the server operator a way to view the current RAS version
